batman-adv-kernelland (2010.1.0~49+g49241cb-1) UNRELEASED; urgency=low

  * New Upstream Snapshot from 49241cb8c43049b2d87ee73a48ca640cf659cefb

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Thu, 02 Sep 2010 21:34:33 +0200

batman-adv-kernelland (2010.0.0+v0.2+124+g9faa319-1) experimental; urgency=low

  * New Upstream Snapshot from 9faa3194a34d578d189ff2b5e45568736c948ded
  * Change get-orig-source.sh to support new versioning scheme

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sat, 19 Jun 2010 00:42:37 +0200

batman-adv-kernelland (2010.0.0-2) unstable; urgency=low

  * Correct destination path of dkms module
  * Upgraded to policy 3.9.1, no changes required
  * debian/patches:
    - Add foreign_stats.patch, Don't increment stats of foreign device (Closes:
      #593473)
    - Add orig_hash_deadlock.patch, unify orig_hash_lock spinlock handling to
      avoid deadlocks (Closes: #593519)
    - Add register_event.patch, Create batman_if only on register event (Closes:
      #593471)
    - Add netdev_reference.patch, Don't use net_dev after dev_put (Closes:
      #593472)
    - Add mac_packet_buff_check.patch, Don't write in not allocated packet_buff
      (Closes: #593724)

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sat, 21 Aug 2010 10:47:59 +0200

batman-adv-kernelland (2010.0.0-1) unstable; urgency=low

  * New Upstream Version
  * Download snapshots from git repository when using debian/get-orig-source.sh
  * Correct URL in watch file to match newer releases
  * debian/patches:
    - Remove upstream merged patches: bat0_failure_memleak.patch,
      limit_queues.patch, seqno_redesign.patch, update_ethhdr_after_copy.patch

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sat, 19 Jun 2010 00:02:48 +0200

batman-adv-kernelland (0.3.0~alpha~v0.2+113+gde32ed5-1) experimental; urgency=low

  * New Upstream Snapshot from de32ed5ba4b6487dbd3c4cad6c9ba8240d79c421

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Wed, 02 Jun 2010 11:52:31 +0200
